--- a/templates/test.html
+++ b/templates/test.html
@@ -8,5 +8,6 @@
     <h3>this is test page!</h3>
         <h4>branch test1</h4>
         <h5>branch master</h5>
+        <h6>branch dev</h6>
 </body>
 </html>
