--- a/templates/test.html
+++ b/templates/test.html
@@ -9,5 +9,6 @@
         <h4>branch test1</h4>
         <h5>branch master</h5>
         <h6>branch dev</h6>
+        <h7>origin_branch_dev</h7>
 </body>
 </html>
