--- a/polls/templates/polls_index.html
+++ b/polls/templates/polls_index.html
@@ -18,7 +18,7 @@
 </script>
 
 <h1>用户输入</h1>
-<form action="/index/" method="post">
+<form action="/polls/index/" method="post">
     <input type="text" name="username"/>
     <input type="password" name="password"/>
     <input type="submit" value="提交"/>
